tests/negative/test_if_cond_not_bool.orb
fnc main() {
    i32 x = 100;
    if (x) {}
}